--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div id="sidePanel">
         <h2>Settings</h2>
         <label for="bucketUrl">Wasabi Bucket URL:</label>
-        <input type="text" id="bucketUrl" placeholder="Enter bucket URL">
+        <input type="text" id="bucketUrl" value="https://s3.ap-southeast-2.wasabisys.com/phototester2024">
         <label for="duration">Photo Duration (seconds):</label>
         <input type="number" id="duration" min="1" value="5">
         <label for="fadeDuration">Fade Duration (seconds):</label>
